Add a basic schema generator (#18)
* Add a basic schema generator

fixes: https://github.com/creek-service/creek-json-schema/issues/3