@@ -16,27 +16,32 @@
 
 package org.creekservice.api.json.schema.generator;
 
+import static java.lang.System.lineSeparator;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.creekservice.api.test.util.coverage.CodeCoverage.codeCoverageCmdLineArg;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.matchesPattern;
-import static org.hamcrest.Matchers.startsWith;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import org.creekservice.api.base.type.Suppliers;
+import java.util.stream.Stream;
 import org.creekservice.api.test.util.TestPaths;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 class JsonSchemaGeneratorFunctionalTest {
 
@@ -45,99 +50,95 @@ class JsonSchemaGeneratorFunctionalTest {
                     .resolve("build/install/generator/lib")
                     .toAbsolutePath();
 
-    private static final Pattern VERSION_PATTERN =
-            Pattern.compile(".*JsonSchemaGenerator: \\d+\\.\\d+\\.\\d+.*", Pattern.DOTALL);
+    private static final Path TEST_TYPES_LIB_DIR =
+            TestPaths.moduleRoot("test-types").resolve("build//libs").toAbsolutePath();
 
-    private Supplier<String> stdErr;
-    private Supplier<String> stdOut;
+    private static final Path EXPECTED_SCHEMA_DIR =
+            TestPaths.moduleRoot("generator").resolve("src/test/resources/test/types");
 
-    @Test
-    void shouldOutputHelp() {
-        // Given:
-        final String[] args = {"-h"};
+    @TempDir private static Path outputDir;
 
-        // When:
-        final int exitCode = runExecutor(args);
+    @BeforeAll
+    static void setUp() {
+        generateSchemas(outputDir);
+    }
 
-        // Then:
-        assertThat(stdErr.get(), is(""));
-        assertThat(stdOut.get(), startsWith("Usage: JsonSchemaGenerator"));
+    @AfterAll
+    static void afterAll() {
+        final Set<Path> expected =
+                TestPaths.listDirectory(EXPECTED_SCHEMA_DIR)
+                        .map(Path::getFileName)
+                        .collect(Collectors.toUnmodifiableSet());
+
+        final Set<Path> actual =
+                TestPaths.listDirectory(outputDir)
+                        .map(Path::getFileName)
+                        .collect(Collectors.toUnmodifiableSet());
+
+        assertThat(actual, is(expected));
+    }
+
+    @ParameterizedTest
+    @MethodSource("expectedSchema")
+    void shouldGenerateSchemasForTestType(final Path expectedSchemaPath) {
+        final Path actualSchemaPath = outputDir.resolve(expectedSchemaPath.getFileName());
         assertThat(
-                stdOut.get(), containsString("-h, --help      Show this help message and exit."));
-        assertThat(stdOut.get(), containsString("-o, --output-directory=<outputDirectory>"));
-        assertThat(exitCode, is(0));
+                "Schema does not exist: " + actualSchemaPath.toUri(),
+                Files.isRegularFile(actualSchemaPath));
+
+        final String expectedSchema = readSchema(expectedSchemaPath);
+        final String actualSchema = readSchema(actualSchemaPath);
+
+        assertThat(
+                "Actual schema: "
+                        + actualSchemaPath.toUri()
+                        + lineSeparator()
+                        + "Does not match expected schema: "
+                        + expectedSchemaPath.toUri(),
+                actualSchema,
+                is(expectedSchema));
     }
 
-    @Test
-    void shouldOutputVersion() {
-        // Given:
-        final String[] args = {"-V"};
-
-        // When:
-        final int exitCode = runExecutor(args);
-
-        // Then:
-        assertThat(stdErr.get(), is(""));
-        assertThat(stdOut.get(), matchesPattern(VERSION_PATTERN));
-        assertThat(exitCode, is(0));
+    // Run me to dump out updated schemas:
+    public static void main(final String... args) {
+        generateSchemas(TestPaths.moduleRoot("generator").resolve(EXPECTED_SCHEMA_DIR));
     }
 
-    @Test
-    void shouldEchoArguments() {
-        // Given:
-        final String[] args = minimalArgs("--echo-only");
-
-        // When:
-        final int exitCode = runExecutor(args);
-
-        // Then:
-        assertThat(stdErr.get(), is(""));
-        assertThat(stdOut.get(), matchesPattern(VERSION_PATTERN));
-        assertThat(stdOut.get(), containsString("--module-path=" + LIB_DIR));
-        assertThat(stdOut.get(), containsString("--output-directory=some/path"));
-        assertThat(stdOut.get(), containsString("--package=<Not Set>"));
-        assertThat(exitCode, is(0));
-    }
-
-    @Test
-    void shouldReportIssuesWithArguments() {
-        // Given:
-        final String[] args = minimalArgs("--unknown");
-
-        // When:
-        final int exitCode = runExecutor(args);
-
-        // Then:
-        assertThat(stdErr.get(), startsWith("Unknown option: '--unknown'"));
-        assertThat(stdErr.get(), containsString("Usage: JsonSchemaGenerator"));
-        assertThat(stdOut.get(), is(""));
-        assertThat(exitCode, is(1));
-    }
-
-    private int runExecutor(final String[] args) {
+    private static void generateSchemas(final Path outputDir) {
         final List<String> cmd =
                 new ArrayList<>(
                         List.of(
                                 "java",
                                 "--module-path",
-                                LIB_DIR.toString(),
+                                LIB_DIR + System.getProperty("path.separator") + TEST_TYPES_LIB_DIR,
+                                "--add-modules",
+                                "creek.json.schema.test.types",
                                 "--module",
-                                "creek.json.schema.generator/org.creekservice.api.json.schema.generator.JsonSchemaGenerator"));
+                                "creek.json.schema.generator/org.creekservice.api.json.schema.generator.JsonSchemaGenerator",
+                                "--output-directory=" + outputDir.toAbsolutePath(),
+                                "--allowed-module=creek.json.schema.test.types"));
 
         codeCoverageCmdLineArg().ifPresent(arg -> cmd.add(1, arg));
-
-        cmd.addAll(List.of(args));
 
         try {
             final Process executor = new ProcessBuilder().command(cmd).start();
 
-            stdErr = Suppliers.memoize(() -> readAll(executor.getErrorStream()));
-            stdOut = Suppliers.memoize(() -> readAll(executor.getInputStream()));
             executor.waitFor(30, TimeUnit.SECONDS);
-            return executor.exitValue();
+
+            if (executor.exitValue() != 0) {
+                throw new AssertionError("Failed: " + readAll(executor.getErrorStream()));
+            }
+
+            assertThat(
+                    readAll(executor.getInputStream()),
+                    matchesPattern(Pattern.compile(".*Wrote [1-9]\\d* schema.*", Pattern.DOTALL)));
         } catch (final Exception e) {
             throw new AssertionError("Error executing: " + cmd, e);
         }
+    }
+
+    public static Stream<Path> expectedSchema() {
+        return TestPaths.listDirectory(EXPECTED_SCHEMA_DIR);
     }
 
     private static String readAll(final InputStream stdErr) {
@@ -146,9 +147,13 @@ class JsonSchemaGeneratorFunctionalTest {
                 .collect(Collectors.joining("\n"));
     }
 
-    private static String[] minimalArgs(final String... additional) {
-        final List<String> args = new ArrayList<>(List.of("--output-directory=some/path"));
-        args.addAll(List.of(additional));
-        return args.toArray(String[]::new);
+    private static String readSchema(final Path path) {
+        try {
+            return Files.readAllLines(path).stream()
+                    .filter(line -> !line.startsWith("#"))
+                    .collect(Collectors.joining(lineSeparator()));
+        } catch (IOException e) {
+            throw new AssertionError("Failed to read " + path.toUri());
+        }
     }
 }
